kubernetes/frontend_weather/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-weather
  namespace: weather
spec:
  selector:
    app: frontend-weather
  ports:
    - port: 80
      targetPort: 80
