kubernetes/frontend_weather/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-to-frontend-weather
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: www.weather.spirteque.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-weather
                port:
                  number: 80
